Add note about enablement in README.md